Removes deprecated URL(String) usage